--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,5 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
-application/config/
+application/config/*
 application/config/config.php
