kirim konfirmasi tagihan
fajrika

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ application/logs/*
 db/ems_backup_2020_07_07_120008_7798038.bak
 application/config/*
 db/ems_backup_2020_07_07_120008_7798038.bak
+db/ems_backup_2020_07_07_120008_7798038.7z
