--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	"require": {
 		"php": ">=5.3.7",
 		"dompdf/dompdf": "^0.8.3",
-		"mpdf/mpdf": "^8.0"
+		"mpdf/mpdf": "^8.0",
+		"twbs/bootstrap": "^4.5"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
